# conjure

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  plugin.json  pyproject.toml
hooks/gemini/: bridge.after_tool_use  bridge.on_tool_start
skills/delegation-core/: SKILL.md  shared-shell-execution.md
skills/gemini-delegation/: SKILL.md
skills/qwen-delegation/: SKILL.md
tools/: delegation_executor.py  quota_tracker.py  usage_logger.py
